# Clawn

./: .gitignore  CMakeLists.txt  Clawn.code-workspace  Dockerfile  LICENSE  README.md
dev_utils/: count_lines.command
docs/: design.md
sample/: c.c  c.clawn  graphics.clawn  llvmir  sample.txt  syntax.clawn
src/include/algorithm/: algorithm.hpp  graph.hpp  tree.hpp
src/include/algorithm/union_find/: union_find.hpp
src/include/ast/: ast.hpp  builder.hpp  visitor.hpp
src/include/compiler/: builtins.hpp  compiler.hpp  constants.hpp  error.hpp  pipeline.hpp  readme.md  untitled
src/include/compiler/module/: module.hpp
src/include/compiler/parser/: driver.hpp  lexer.hpp  prelexer.hpp
src/include/hierarchy/: hierarchical_collector.hpp  hierarchy.hpp  mangler.hpp
src/include/hir/: hir.hpp  visitor.hpp
src/include/location/: location.hpp
src/include/mir/: mir.hpp
src/include/requirement/: feature.hpp  readme.md  requirement.hpp  type.hpp  type_solver.hpp  visitor.hpp
src/include/resource/: resource.hpp
src/include/utils/: hash_table.hpp  move_constructible.hpp  pattern_match.hpp  transform.hpp  unique_number.hpp  variant_wrapper.hpp
src/lib/: main.cpp
src/lib/ast/: CMakeLists.txt  ast.cpp  builder.cpp  visitor.cpp
src/lib/compiler/: CMakeLists.txt  a.out  builtins.clawn  builtins.cpp  builtins.hpp  compiler.cpp  error.cpp
src/lib/compiler/module/: module.cpp
src/lib/compiler/parser/: driver.cpp  lexer.ll  main.cpp  parser.yy  patch.py  prelexer.ll
src/lib/compiler/pipeline/: ast_to_hir.cpp  hir_to_mir.cpp  hir_verifier.cpp  llvm_to_binary.cpp  mir_to_llvm_ir.cpp  monomorphizer.cpp
src/lib/hierarchy/: CMakeLists.txt  hierarchy.cpp  mangler.cpp
src/lib/hir/: CMakeLists.txt  hir.cpp  visitor.cpp
src/lib/location/: CMakeLists.txt  location.cpp
src/lib/mir/: CMakeLists.txt  analyzer.cpp  mir.cpp
src/lib/requirement/: CMakeLists.txt  requirement.cpp  type.cpp  type_solver.cpp
src/lib/resource/: CMakeLists.txt  resource.cpp
src/lib/utils/: CMakeLists.txt  unique_number.cpp
test/: CMakeLists.txt  test_main.cpp
test/resources/: function.clawn  higher_function.clawn  if_else.clawn  mixture.clawn  requirement.clawn  structure.clawn  test.clawn  union.clawn
test/unittests/constraint/: test_type.cpp  test_type_solver.cpp
test/unittests/utils/: test_pattern_match.cpp
tools/: cridge.py  requirements.txt
